Improved UI feedback when performing new/save/load and fixed save response not showing up correctly on server.

--- a/client/assets/custom.css
+++ b/client/assets/custom.css
@@ -7,8 +7,9 @@
     margin-top: 1em;
     margin-bottom: 1em;
 }
-#googleLogin {
-    margin: .75em;
+.navbar-nav {
+    margin-top: .65em;
+    margin-right: 0 !important;
 }
 .background-library, .sprite-library, .block-list {
     margin: 0 auto;
